--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_REDIS_HOST="167.86.112.29:6379"
-DB_REDIS_PASSWORD="passrahasiaasd123QWE"
+DB_REDIS_HOST="161.97.134.250:6379"
+DB_REDIS_PASSWORD="asdQWE123!@#"
 DB_REDIS_NAME="0"
